fixed line-wrap in homepage hero

--- a/web/wp-content/themes/cncf-twenty-two/source/scss/components/_front-page.scss
+++ b/web/wp-content/themes/cncf-twenty-two/source/scss/components/_front-page.scss
@@ -70,7 +70,7 @@
 		}
 		letter-spacing: 0.02em;
 		font-weight: 400;
-		max-width: 800px;
+		max-width: 700px;
 		line-height: 160%;
 		font-size: 14px;
 		@media (min-width: 412px) {
